fix(css): force-align Bootstrap blockquote left

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.page.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.page.css
@@ -126,8 +126,12 @@ Styleguide Components.DjangoCMS.Blog.App.Page
   margin-inline: auto;
 }
 
-:--article-page .blog-content .blockquote[class*="text-"] {
-  text-align: left !important; /* overwrite Bootstrap .text-... !important */
+/* To always align Bootstrap blockquote text left */
+/* FAQ: Boostrap, loaded in foundation layer, used !important */
+@layer foundation {
+  :--article-page .blog-content .blockquote[class*="text-"] {
+    text-align: left !important; /* overwrite Bootstrap .text-... !important */
+  }
 }
 
 /* To remove margin on narrow screens */
